Alert, RadioButton and Checkbox migrated to Angular 1.0.0

--- a/web/index.html
+++ b/web/index.html
@@ -64,9 +64,10 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="accordion/accordion_demo.html"></div> -->
 <!--     <hr> -->
     
-<!--     <h3>Alert</h3> -->
+    <h3>Alert</h3>
+    <alert-demo></alert-demo>
 <!--     <div ng-include="alert/alert_demo.html"></div> -->
-<!--     <hr> -->
+    <hr>
     
 <!--     <h3>Collapse</h3> -->
 <!--     <div ng-include="collapse/collapse_demo.html"></div> -->
