--- a/web/alert/alert_demo.html
+++ b/web/alert/alert_demo.html
@@ -4,9 +4,9 @@ Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
 https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
-<div alert-ctrl>
+<div>
   <alert type="'info'">Immortal info</alert>
-  <alert ng-repeat="alert in ctrl.alerts" type="alert.type" close="ctrl.closeAlert($index)">{{alert.msg}}</alert>
-  <button class='btn btn-default' ng-click="ctrl.addAlert()">Add Warning Alert</button>
+  <alert ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
+  <button class='btn btn-default' ng-click="addAlert()">Add Warning Alert</button>
 </div>
     
