--- a/web/index.html
+++ b/web/index.html
@@ -72,9 +72,9 @@ All rights reserved.  Please see the LICENSE.md file.
     <collapse-demo></collapse-demo>
     <hr>
     
-<!--     <h3>Dropdown Toggle</h3> -->
-<!--     <div ng-include="dropdown_toggle/dropdown_toggle_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Dropdown Toggle</h3>
+    <dropdown-demo></dropdown-demo>
+    <hr>
     
 <!--     <h3>Pagination</h3> -->
 <!--     <div ng-include="pagination/pagination_demo.html"></div> -->
