--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <hr> -->
     
 <!--     <h3>Tooltip</h3> -->
-<!--     <div ng-include="tooltip/tooltip_demo.html"></div> -->
+<!--     <tooltip-demo></tooltip-demo> -->
 <!--     <hr> -->
     
 <!--     <h3>Timepicker</h3> -->
