--- a/web/index.html
+++ b/web/index.html
@@ -56,9 +56,9 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     </div> -->
 <!--     <hr> -->
 
-<!--     <h3>Rating</h3> -->
-<!--     <div ng-include="rating/rating_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Rating</h3>
+    <rating-demo></rating-demo>
+    <hr>
     
 <!--     <h3>Accordion</h3> -->
 <!--     <div ng-include="accordion/accordion_demo.html"></div> -->
