--- a/web/index.html
+++ b/web/index.html
@@ -29,9 +29,9 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <tooltip-demo></tooltip-demo> -->
 <!--     <hr> -->
     
-<!--     <h3>Timepicker</h3> -->
-<!--     <div ng-include="timepicker/timepicker_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Timepicker</h3>
+    <timepicker-demo></timepicker-demo>
+    <hr>
     
 <!--     <h3>Drag And Drop</h3> -->
 <!--     <div ng-include="dragdrop/dragdrop_demo.html"></div> -->
