--- a/lib/modal/window.html
+++ b/lib/modal/window.html
@@ -6,7 +6,7 @@ All rights reserved.  Please see the LICENSE.md file.
 -->
 <div tabindex="-1" class="modal {{ windowClass }}"
     ng-style="{'z-index': '{{1050 + index*10}}', 'display': 'block'}" ng-click="close($event)">
-    <div class="modal-dialog {{ m.sizeClass }}">
+    <div class="modal-dialog {{ sizeClass }}">
       <div class="modal-content">
         <content></content>
       </div>
