Tooltip migrated to Angular 1.0

--- a/web/index.html
+++ b/web/index.html
@@ -25,9 +25,9 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="popover/popover_demo.html"></div> -->
 <!--     <hr> -->
     
-<!--     <h3>Tooltip</h3> -->
-<!--     <tooltip-demo></tooltip-demo> -->
-<!--     <hr> -->
+    <h3>Toltip</h3>
+    <tooltip-demo></tooltip-demo>
+    <hr>
     
     <h3>Timepicker</h3>
     <timepicker-demo></timepicker-demo>
