--- a/web/index.html
+++ b/web/index.html
@@ -41,10 +41,10 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="datepicker/datepicker_demo.html"></div> -->
 <!--     <hr> -->
     
-<!--     <h3>Modal Window</h3> -->
-<!--     <div ng-include="modal/modal_demo_embedded_template.html"></div> -->
-<!--     <div ng-include="modal/modal_demo_embedded_template_static_backdrop.html"></div> -->
-<!--     <div ng-include="modal/modal_demo_template_element.html"></div> -->
+    <h3>Modal Window</h3>
+    <modal-demo-embedded-tmpl></modal-demo-embedded-tmpl>
+    <modal-demo-embedded-tmpl-static-backdrop></modal-demo-embedded-tmpl-static-backdrop>
+<!--     <modal-demo-tag-tmpl></modal-demo-tag-tmpl> -->
 <!--     <div class="panel panel-default"> -->
 <!--       <div class="panel-heading">Modal from template file</div> -->
 <!--       <div class="panel-body"> -->
@@ -54,7 +54,7 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--         </div> -->
 <!--       </div> -->
 <!--     </div> -->
-<!--     <hr> -->
+    <hr>
 
     <h3>Rating</h3>
     <rating-demo></rating-demo>
