--- a/web/modal/modal_demo_template_element_from_other_file.html
+++ b/web/modal/modal_demo_template_element_from_other_file.html
@@ -10,13 +10,13 @@ All rights reserved.  Please see the LICENSE.md file.
 </div>
 <div class="modal-body">
   <ul>
-    <li ng-repeat="item in ctrl2.items">
-      <a ng-click="ctrl2.tmp = item">{{ item }}</a>
+    <li ng-repeat="item in items">
+      <a ng-click="tmp = item">{{ item }}</a>
     </li>
   </ul>
-  Selected: <b>{{ctrl2.tmp}}</b>
+  Selected: <b>{{tmp}}</b>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-  <button type="button" class="btn btn-primary" ng-click="ctrl2.ok(ctrl2.tmp)">OK</button>
+  <button type="button" class="btn btn-primary" ng-click="ok(tmp)">OK</button>
 </div>
