--- a/lib/pagination/pager.html
+++ b/lib/pagination/pager.html
@@ -5,6 +5,6 @@ https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 <ul class="pager">
-  <li ng-class="{disabled: noPrevious, previous : align}"><a href="" ng-click="selectPage(currentPage - 1)">{{previousText}}</a></li>
-  <li ng-class="{disabled: noNext, next : align}"><a href="" ng-click="selectPage(currentPage + 1)">{{nextText}}</a></li>
+  <li ng-class="{disabled: noPrevious, previous : align}"><a ng-click="selectPage(currentPage - 1)">{{previousText}}</a></li>
+  <li ng-class="{disabled: noNext, next : align}"><a ng-click="selectPage(currentPage + 1)">{{nextText}}</a></li>
 </ul>
