--- a/lib/pagination/pagination.html
+++ b/lib/pagination/pagination.html
@@ -1,7 +1,7 @@
 <ul class="pagination">
-  <li ng-if="boundaryLinks" ng-class="{disabled: noPrevious}"><a href ng-click="selectPage(1)">{{firstText}}</a></li>
-  <li ng-if="directionLinks" ng-class="{disabled: noPrevious}"><a href ng-click="selectPage(currentPage - 1)">{{previousText}}</a></li>
-  <li ng-repeat="page in pages" ng-class="{active: page.isActive}"><a href ng-click="selectPage(page.number)">{{page.text}}</a></li>
-  <li ng-if="directionLinks" ng-class="{disabled: noNext}"><a href ng-click="selectPage(currentPage + 1)">{{nextText}}</a></li>
-  <li ng-if="boundaryLinks" ng-class="{disabled: noNext}"><a href ng-click="selectPage(totalPages)">{{lastText}}</a></li>
+  <li ng-if="boundaryLinks" ng-class="{disabled: noPrevious}"><a ng-click="selectPage(1)">{{firstText}}</a></li>
+  <li ng-if="directionLinks" ng-class="{disabled: noPrevious}"><a ng-click="selectPage(currentPage - 1)">{{previousText}}</a></li>
+  <li ng-repeat="page in pages" ng-class="{active: page.isActive}"><a ng-click="selectPage(page.number)">{{page.text}}</a></li>
+  <li ng-if="directionLinks" ng-class="{disabled: noNext}"><a ng-click="selectPage(currentPage + 1)">{{nextText}}</a></li>
+  <li ng-if="boundaryLinks" ng-class="{disabled: noNext}"><a ng-click="selectPage(totalPages)">{{lastText}}</a></li>
 </ul>
