--- a/web/index.html
+++ b/web/index.html
@@ -21,9 +21,9 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="typeahead/typeahead_demo.html"></div> -->
 <!--     <hr> -->
     
-<!--     <h3>Popover</h3> -->
-<!--     <div ng-include="popover/popover_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Popover</h3>
+    <popover-demo></popover-demo>
+    <hr>
     
     <h3>Toltip</h3>
     <tooltip-demo></tooltip-demo>
