--- a/web/index.html
+++ b/web/index.html
@@ -80,9 +80,9 @@ All rights reserved.  Please see the LICENSE.md file.
     <pagination-demo></pagination-demo>
     <hr>
     
-<!--     <h3>Progressbar</h3> -->
-<!--     <div ng-include="progressbar/progressbar_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Progressbar</h3>
+    <progress-demo></progress-demo>
+    <hr>
     
     <h3>Buttons</h3>
     <buttons-demo></buttons-demo>
