--- a/web/index.html
+++ b/web/index.html
@@ -88,9 +88,9 @@ All rights reserved.  Please see the LICENSE.md file.
     <buttons-demo></buttons-demo>
     <hr>
     
-<!--     <h3>Tabs</h3> -->
-<!--     <div ng-include="tabs/tabs_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Tabs</h3>
+    <tabs-demo></tabs-demo>
+    <hr>
     
 <!--     <h3>Carousel</h3> -->
 <!--     <div ng-include="carousel/carousel_demo.html"></div> -->
