--- a/web/index.html
+++ b/web/index.html
@@ -92,8 +92,8 @@ All rights reserved.  Please see the LICENSE.md file.
     <tabs-demo></tabs-demo>
     <hr>
     
-<!--     <h3>Carousel</h3> -->
-<!--     <div ng-include="carousel/carousel_demo.html"></div> -->
+    <h3>Carousel</h3>
+    <carousel-demo></carousel-demo>
         
     <script type="application/dart" src="main.dart"></script>
     <script src="packages/browser/dart.js"></script>
