--- a/web/index.html
+++ b/web/index.html
@@ -37,9 +37,9 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="dragdrop/dragdrop_demo.html"></div> -->
 <!--     <hr> -->
 
-<!--     <h3>Datepicker (partially implemented)</h3> -->
-<!--     <div ng-include="datepicker/datepicker_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Datepicker (partially implemented)</h3>
+    <datepicker-demo></datepicker-demo>
+    <hr>
     
     <h3>Modal Window</h3>
     <modal-demo-embedded-tmpl></modal-demo-embedded-tmpl>
