--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,9 @@ All rights reserved.  Please see the LICENSE.md file.
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="packages/angular_ui/css/angular.css">
     <link rel="stylesheet" href="packages/angular_ui/carousel/slide.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/ripples.css" rel="stylesheet">
+    <link href="css/material-wfont.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
   </head>
   <body ng-cloak>
