--- a/web/index.html
+++ b/web/index.html
@@ -8,12 +8,12 @@ All rights reserved.  Please see the LICENSE.md file.
   <head>
     <meta charset="utf-8">
     <title>Angular dart ui</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="packages/angular_ui/css/angular.css">
     <link rel="stylesheet" href="packages/angular_ui/carousel/slide.css">
-    <link rel="stylesheet" href="css/ripples.css">
-    <link rel="stylesheet" href="css/material-wfont.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/ripples.css" rel="stylesheet">
+    <link href="css/material-wfont.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
   </head>
   <body ng-cloak>
