Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
         </div>
 
         <h1>
-<a id="angular-ui-" class="anchor" href="#angular-ui-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Angular UI <a href="https://travis-ci.org/akserg/angular.dart.ui"><img src="https://travis-ci.org/akserg/angular.dart.ui.svg?branch=master" alt="Build Status"></a>
-</h1>
+<a id="angular-ui----" class="anchor" href="#angular-ui----" aria-hidden="true"><span class="octicon octicon-link"></span></a>Angular UI <a href="https://travis-ci.org/akserg/angular.dart.ui"><img src="https://travis-ci.org/akserg/angular.dart.ui.svg?branch=master" alt="Build Status"></a> <a href="http://waffle.io/akserg/angular.dart.ui?milestone=0.6"><img src="https://badge.waffle.io/akserg/angular.dart.ui.svg?label=ready" alt="Stories in Ready"></a> <a href="https://coveralls.io/r/akserg/angular.dart.ui"><img src="https://coveralls.io/repos/akserg/angular.dart.ui/badge.svg" alt="Coverage Status"></a> </h1>
 
 <p>Port of Angular-UI to Dart.</p>
+
+<p>Look at <a href="http://akserg.github.io/angular.dart.ui.demo/index.html">Demo</a> page for this project.</p>
+
+<p>You may be interesting in check out <a href="http://akserg.github.io/angular.dart.material.demo">Material Design Theme</a> for this project.</p>
 
 <h2>
 <a id="bootstrap-directives-and-components" class="anchor" href="#bootstrap-directives-and-components" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bootstrap directives and components</h2>
