--- a/web/carousel/carousel_demo.html
+++ b/web/carousel/carousel_demo.html
@@ -21,7 +21,7 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--       <a class="btn btn-info" ng-click="addSlide()">Add Slide</a> -->
     </div>
     <div class="col-md-5">
-      Interval, in milliseconds:
+      Interval, in seconds:
       <input type="number" class="form-control" ng-model="myInterval" ng-value="myInterval | stringify">
       Enter a negative number to stop the interval.
     </div>
