--- a/index.html
+++ b/index.html
@@ -61,10 +61,6 @@
 <span class="pl-c">&lt;!-- your own CSS file --&gt;</span>
 &lt;<span class="pl-ent">link</span> <span class="pl-e">rel</span>=<span class="pl-s1"><span class="pl-pds">"</span>stylesheet<span class="pl-pds">"</span></span> <span class="pl-e">href</span>=<span class="pl-s1"><span class="pl-pds">"</span>style.css<span class="pl-pds">"</span></span>&gt;</pre></div>
 
-<p>Add the follwing css ccode to your <code>style.css</code></p>
-
-<div class="highlight highlight-css"><pre><span class="pl-e">.nav</span>, <span class="pl-e">.pagination</span>, <span class="pl-e">.carousel</span>, <span class="pl-e">.panel-title</span> <span class="pl-ent">a</span> { <span class="pl-mp"><span class="pl-s3">cursor</span></span>: <span class="pl-sc">pointer</span>; }</pre></div>
-
 <p>Add the angular-ui module in your <code>main.dart</code></p>
 
 <div class="highlight highlight-dart"><pre><span class="pl-k">import</span> <span class="pl-s1">'package:angular/angular.dart'</span>;
@@ -116,9 +112,8 @@
 <li><a href="https://github.com/ufoscout">Francesco Cina</a></li>
 <li><a href="https://github.com/angular/angular.dart">AngularDart project</a></li>
 <li><a href="https://github.com/neermitt">Neeraj Mittal</a></li>
+<li><a href="https://github.com/Roba1993">Robert Schütte</a></li>
 </ul>
-
-<p>Big thanks to <a href="https://github.com/Roba1993">Robert Schütte</a> for his improvements of documentation.</p>
       </section>
 
     </div>
