--- a/web/tabs/tabs_demo.html
+++ b/web/tabs/tabs_demo.html
@@ -20,13 +20,10 @@ All rights reserved.  Please see the LICENSE.md file.
     <tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled">
       {{tab.content}}
     </tab>
-<!--     <tab select="alertMe()"> -->
-<!--       <tab-heading> -->
-<!--         <i class="glyphicon glyphicon-bell"></i> Alert! -->
-<!--       </tab-heading> -->
-<!--       I've got an HTML heading, and a select callback. Pretty cool! -->
-<!--     </tab> -->
-    <tab select="alertMe()" heading="Alert!">
+    <tab select="alertMe()">
+      <tab-heading>
+        <i class="glyphicon glyphicon-bell"></i> Alert!
+      </tab-heading>
       I've got an HTML heading, and a select callback. Pretty cool!
     </tab>
 
