--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@ All rights reserved.  Please see the LICENSE.md file.
     <popover-demo></popover-demo>
     <hr>
     
-    <h3>Toltip</h3>
+    <h3>Tooltip</h3>
     <tooltip-demo></tooltip-demo>
     <hr>
     
