--- a/web/tabs/tabs_demo.html
+++ b/web/tabs/tabs_demo.html
@@ -22,11 +22,10 @@ All rights reserved.  Please see the LICENSE.md file.
     </tab>
     <tab select="alertMe()">
       <tab-heading>
-        <i class="glyphicon glyphicon-bell"></i> Alert!
+        <i class="glyphicon glyphicon-bell"></i><label>Alert!</label>
       </tab-heading>
       I've got an HTML heading, and a select callback. Pretty cool!
     </tab>
-
   </tabset>
 
   <hr />
