--- a/web/index.html
+++ b/web/index.html
@@ -12,19 +12,14 @@ All rights reserved.  Please see the LICENSE.md file.
     <link rel="stylesheet" href="packages/angular_ui/css/angular.css">
     <link rel="stylesheet" href="packages/angular_ui/carousel/slide.css">
     <link rel="stylesheet" href="main.css">
+
+    <script type="application/dart" src="main.dart"></script>
+    <script src="packages/browser/dart.js"></script>
   </head>
   <body>
-    <hello-app></hello-app>
-    
-    <script type="application/dart" src="main.dart"></script>
-    <script src="packages/browser/dart.js"></script>
-  </body>
-</html>
     <h1>Angular Dart UI for Angular2</h1>
     <hr>
-    <hello-app></hello-app>
-        
-    <script type="application/dart" src="main.dart"></script>
-    <script src="packages/browser/dart.js"></script>
+    <demo-app></demo-app>
   </body>
 </html>
+
