--- a/web/datepicker/datepicker_demo.html
+++ b/web/datepicker/datepicker_demo.html
@@ -22,6 +22,32 @@ All rights reserved.  Please see the LICENSE.md file.
       </div>
     </div>
 
+    <h4>Popup</h4>
+    <div class="row">
+        <!-- <div class="col-md-6">
+            <p class="input-group">
+              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="status.opened" min-date="minDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </p>
+        </div> -->
+
+        <!-- <div class="col-md-6">
+            <p class="input-group">
+              <input type="date" class="form-control" uib-datepicker-popup ng-model="dt" is-open="status.opened" min-date="minDate" max-date="maxDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </p>
+        </div> -->
+    </div>
+    <!-- <div class="row">
+        <div class="col-md-6">
+            <label>Format:</label> <select class="form-control" ng-model="format" ng-options="f for f in formats"><option></option></select>
+        </div>
+    </div> -->
+
     <hr>
     <button class="btn btn-sm btn-info" ng-click="today()">Today</button>
     <button class="btn btn-sm btn-default" ng-click="dt = '2009-09-30'">2009-09-30</button>
